# nickchow.info

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: rust.yaml
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: example.spec.ts
src/: api.rs  app.rs  fetch.rs  lib.rs  main.rs  notfound.rs  progress.rs  routes.rs
src/components/: footer.rs  mod.rs  navbar.rs  progress.rs
src/pages/: counters.rs  error.rs  fetch.rs  home.rs  mod.rs  notfound.rs  stories.rs  story.rs  test.rs  user.rs
style/: style.min.css
