[package]
name = "nickchow_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.2.5", features = ["serde", "csr"] }
leptos_meta = { version = "0.2.5", features = ["csr"] }
leptos_router = { version = "0.2.5", features = ["csr"] }
log = "0.4.18"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }

# definitions for client side rendering
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"

# [build]
# rustc-wrapper = "/opt/homebrew/bin/sccache"

[profile.release]
codegen-units = 4
opt-level = 2
lto = true

[profile.ephemeral-build]
opt-level = 2
codegen-units = 4
inherits = "release"
